# actix_server

./: .gitignore  CONSULTAS.sql  Cargo.toml  build.rs  env-example.env
migrations/2023-06-09-020443_create_posts/: up.sql
migrations/2023-06-10-071402_create_users/: up.sql
migrations/2024-12-20-220023_create_table/: down.sql  up.sql
migrations/2024-12-20-220031_create_fields/: down.sql  up.sql
migrations/2025-02-19-194728_users_permissions/: down.sql  up.sql
migrations/2025-02-19-194817_tables_permissions/: down.sql  up.sql
migrations/2025-02-19-194851_customizations/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: mod.rs  query_cfg.rs
src/controller/: mod.rs
src/controller/custom/: custom_controller.rs  mod.rs  structs.rs
src/controller/deno/: deno_controller.rs  mod.rs
src/controller/fields/: field_controller.rs  mod.rs  structs.rs  utils.rs
src/controller/fields/types/: mod.rs
src/controller/login/: auth_controller.rs
src/controller/posts/: mod.rs  post_controller.rs  structs.rs
src/controller/tables/: mod.rs  structs.rs  table_controller.rs
src/controller/tables/permissions/: mod.rs  structs.rs  table_permissions_controller.rs
src/controller/users/: mod.rs  structs.rs  user_controller.rs
src/controller/users/utils/: password.rs
src/middlewares/: auth.rs  check_login.rs  custom_auth.rs  mod.rs  should_check_login.rs
src/models/: fields_model.rs  mod.rs  posts_model.rs  table_model.rs  users_model.rs
src/models/cms/: fields_model.rs  mod.rs  permission_model.rs  table_model.rs
src/models/cms/custom/: mod.rs
src/models/db/: connection.rs  driver_connection.rs  mod.rs
src/models/users/: mod.rs  permissions_model.rs  users_model.rs
src/routes/: mod.rs  scopes.rs  utils.rs
src/routes/posts/: alter_post.rs  create_post.rs  delete_post.rs  get_posts.rs  mod.rs
src/routes/users/: create_user.rs  get_users.rs
src/services/: auth.rs  custom.rs  field.rs  mod.rs  posts.rs  table.rs  users.rs
src/services/cms/core/: field.rs  table.rs
src/services/cms/custom/: custom.rs
src/services/users/auth/: auth.rs
src/utils/: deserialize_payload.rs  get_body.rs  mod.rs  sql.rs  string_utils.rs
