[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
# ORM
diesel = { version = "2.1.0", features = ["postgres","chrono"] }
# Env file manageament
dotenvy = "0.15"
# JSON serialize and deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3"
# Logging
env_logger = "0.10.0"
#auth
jsonwebtoken = "8"
# Pass hashing
rust-argon2 = "1.0"
# Datetime
chrono = { version = "0.4.26", features = ["serde"] }

