[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
# ORM
diesel = { version = "2.1.0", features = ["postgres","chrono"] }
# Env file manageament
dotenvy = "0.15"
# JSON serialize and deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3"
futures-util = "0.3.28"
# Logging
env_logger = "0.11.3"
#auth
jsonwebtoken = "9.3.0"
# Pass hashing
rust-argon2 = "2.1.0"
# Datetime
chrono = { version = "0.4.26", features = ["serde"] }
# Declarative enums
derive_more = "0.99.17"
#log
log = "0.4"

