[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.3", features = [
    "postgres",
    "chrono",
    "serde_json",
] } # ORM
# Env file manageament
dotenvy = "0.15"
# JSON serialize and deserialize
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
futures = "0.3"
futures-util = "0.3.28"
# Logging
env_logger = "0.11.5"
#auth
jsonwebtoken = "9.3.0"
# Pass hashing
rust-argon2 = "2.1.0"
# Datetime
chrono = { version = "0.4.38", features = ["serde"] }
# Declarative enums
derive_more = { version = "1.0.0", features = ["full"] }
#log
log = "0.4.22"

#error handling
anyhow = "1.0.94"
thiserror = "2.0.8"
diesel-dynamic-schema = "0.2.3"
tokio-postgres = { version = "0.7.12", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }

# mark_route = {path = "markRoute"}
